--- a/index.html
+++ b/index.html
@@ -36,17 +36,24 @@
       left: 0;
     }
 
-    #playButton {
-      margin: 24px auto 0 auto;
-      padding: 14px 32px;
-      font-size: 1.2em;
-      border-radius: 8px;
-      border: none;
-      background: #f3e7ff;
-      color: #4b2e83;
-      font-weight: bold;
-      cursor: pointer;
-    }
+ #playButton {
+  margin: 32px auto 0 auto;
+  padding: 20px 48px;
+  font-size: 1.5em;
+  border-radius: 12px;
+  border: none;
+  background: linear-gradient(135deg, #f3e7ff, #d0b3ff);
+  color: #4b2e83;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(75, 46, 131, 0.3);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+#playButton:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 18px rgba(75, 46, 131, 0.4);
+}
 
     .elevator-option {
       width: 300px;
@@ -270,6 +277,9 @@
 
       const reactionTimeSec = (performance.now() - trialStartTime) / 1000;
 
+      const isNormal = /_gap(\.mp3)?$/.test(currentAudioFile); // true if just "_gap"
+      const correctAnswer = isNormal ? "normal" : "wonky";
+      
       const entry = {
         participant: participantID,
         session: sessionID,
@@ -277,8 +287,9 @@
         timestamp: new Date().toISOString(),
         choice,
         audio: currentAudioFile,
+        correct_answer: correctAnswer,
         reaction_time_sec: parseFloat(reactionTimeSec.toFixed(3))
-      };
+    };
 
       const backendlessURL = "https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses";
 
