--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
       left: 0;
     }
 
- #playButton {
-  margin: 32px auto 0 auto;
-  padding: 20px 48px;
-  font-size: 1.5em;
-  border-radius: 12px;
-  border: none;
-  background: linear-gradient(135deg, #f3e7ff, #d0b3ff);
-  color: #4b2e83;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(75, 46, 131, 0.3);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
+    #playButton {
+      margin: 32px auto 0 auto;
+      padding: 20px 48px;
+      font-size: 1.5em;
+      border-radius: 12px;
+      border: none;
+      background: linear-gradient(135deg, #f3e7ff, #d0b3ff);
+      color: #4b2e83;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(75, 46, 131, 0.3);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
 
-#playButton:hover {
-  transform: scale(1.05);
-  box-shadow: 0 6px 18px rgba(75, 46, 131, 0.4);
-}
+    #playButton:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 18px rgba(75, 46, 131, 0.4);
+    }
 
     .elevator-option {
       width: 300px;
@@ -67,9 +67,7 @@
     }
   </style>
 </head>
-
 <body>
-  <!-- Container for visuals (stillframes and videos) -->
   <div id="visual-container">
     <img class="media-content" id="stillframe1" src="stillframe1.png" />
     <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
@@ -80,25 +78,22 @@
   </div>
 
   <audio id="myAudio" hidden preload="auto"></audio>
-
-  <!-- Button to start each trial -->
-  <div id="trialControls">
-    <button id="playButton">Press to Begin Trial</button>
-  </div>
+  <div id="trialControls"></div>
 
   <script>
-    // Experiment variables
     let responseSubmitted = false;
-    const totalTrials = 3;
     let trialCounter = 1;
     let participantID = null;
     let sessionID = null;
     let currentAudioFile = "";
-    let availableAudios = [];
     let trialStartTime = null;
     const visuals = [];
 
-    // Initialization: Get participant ID and load audio metadata
+    const TRIALS_PER_BLOCK = 2;
+    const blockOrder = ["tempo", "pitch"];
+    let currentBlockIndex = 0;
+    const blocks = { tempo: [], pitch: [] };
+
     window.onload = async () => {
       while (!participantID) {
         participantID = prompt("Enter your Participant ID:");
@@ -107,22 +102,38 @@
       sessionID = `${participantID}_${new Date().toISOString()}`;
 
       try {
-        const response = await fetch("audio_files.csv");
-        const text = await response.text();
-        const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-        if (rows.length < totalTrials) throw new Error("Not enough unique audio files.");
-        shuffleArray(rows);
-        availableAudios = rows.slice(0, totalTrials);
-      } catch (err) {
-        alert("Failed to load audio files: " + err.message);
-        return;
-      }
+        const [tempoCSV, pitchCSV] = await Promise.all([
+          fetch("tempo_trials.csv").then(res => res.text()),
+          fetch("pitch_trials.csv").then(res => res.text())
+        ]);
 
-      setupVisualElements();
-      updatePlayButton();
+        blocks.tempo = getRandomSubset(parseCSV(tempoCSV), TRIALS_PER_BLOCK);
+        blocks.pitch = getRandomSubset(parseCSV(pitchCSV), TRIALS_PER_BLOCK);
+
+        setupVisualElements();
+        updatePlayButton();
+      } catch (err) {
+        alert("Failed to load trial files: " + err.message);
+      }
     };
 
-    // Create mapping of each visual element in sequence
+    function parseCSV(text) {
+      return text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+    }
+
+    function getRandomSubset(array, n) {
+      const copy = [...array];
+      shuffleArray(copy);
+      return copy.slice(0, n);
+    }
+
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
+
     function setupVisualElements() {
       const still1 = document.getElementById("stillframe1");
       const still2 = document.getElementById("stillframe2");
@@ -141,14 +152,12 @@
       );
     }
 
-    // Update play button and trial info
     function updatePlayButton() {
-      const trialControls = document.getElementById("trialControls");
-      trialControls.innerHTML = `<button id="playButton">Press to Begin Trial ${trialCounter} of ${totalTrials}</button>`;
+      const blockName = blockOrder[currentBlockIndex].toUpperCase();
+      document.getElementById("trialControls").innerHTML = `<button id="playButton">Begin ${blockName} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>`;
       document.getElementById("playButton").addEventListener("click", playTrial);
     }
 
-    // Hide all media and reset videos
     function hideAll() {
       visuals.forEach(v => {
         v.el.style.display = "none";
@@ -159,16 +168,19 @@
       });
     }
 
-    // Execute one full trial: audio + visual playback in sync
     async function playTrial() {
       document.getElementById("trialControls").innerHTML = "";
       hideAll();
 
       try {
-        const [filename, original, gap, test] = availableAudios[trialCounter - 1];
+        const blockName = blockOrder[currentBlockIndex];
+        const blockTrials = blocks[blockName];
+        const [filename, original, gap, test] = blockTrials[trialCounter - 1];
+
         const originalSec = parseFloat(original);
         const gapSec = parseFloat(gap);
         const testSec = parseFloat(test);
+
         const audio = document.getElementById("myAudio");
         audio.src = filename;
         currentAudioFile = filename;
@@ -176,10 +188,10 @@
         const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
         await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
 
-        // Calculate display timing for each visual segment
         const video1Sec = v1.duration;
         const gapVideoSec = vGap.duration;
         const video2Sec = v2.duration;
+
         const preStillSec = Math.max(0, originalSec - video1Sec);
         const gapStillSec = Math.max(0, gapSec - gapVideoSec);
         const postStillSec = Math.max(0, testSec - video2Sec);
@@ -198,16 +210,14 @@
         visuals[5].start = t;
         visuals[5].end = t += postStillSec;
 
-        // Wait for audio to be ready
         await new Promise((resolve, reject) => {
           audio.oncanplaythrough = resolve;
           audio.onerror = () => reject("Audio failed to load");
         });
 
-        trialStartTime = performance.now(); // Start RT clock
+        trialStartTime = performance.now();
         let currentVisual = null;
 
-        // Loop through visuals based on audio time
         function updateVisuals() {
           const time = audio.currentTime;
           for (const v of visuals) {
@@ -237,109 +247,6 @@
       }
     }
 
-    // Display two elevator choices and collect response
-    function showResponseOptions() {
-      document.body.innerHTML = `
-        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; padding: 20px;">
-          <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
-          <p style="max-width: 600px; font-size: 1.1em; margin-bottom: 30px;">
-            Now that the music is over, think back to how it sounded before and after the pause.
-            <br><br>
-            If the music stayed the same, choose the <strong>normal</strong> elevator.
-            If the music changed after the pause, choose the <strong>wonky</strong> elevator.
-          </p>
-          <div style="display: flex; justify-content: center; gap: 80px;">
-            <div style="text-align: center;">
-              <img src="normal.jpg" class="elevator-option" id="normalElevator" alt="Normal Elevator">
-              <div style="margin-top: 12px; font-weight: bold;">Normal Elevator</div>
-            </div>
-            <div style="text-align: center;">
-              <img src="wonky.png" class="elevator-option" id="wonkyElevator" alt="Wonky Elevator">
-              <div style="margin-top: 12px; font-weight: bold;">Wonky Elevator</div>
-            </div>
-          </div>
-        </div>
-      `;
-
-      // Attach one-time click handlers
-      document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
-      document.getElementById("wonkyElevator").addEventListener("click", () => handleResponse("wonky"), { once: true });
-    }
-
-    // Handle participant response and send data to backend
-    function handleResponse(choice) {
-      if (responseSubmitted) return;
-      responseSubmitted = true;
-
-      // Disable additional clicks
-      const imgs = document.querySelectorAll('.elevator-option');
-      imgs.forEach(img => img.style.pointerEvents = 'none');
-
-      const reactionTimeSec = (performance.now() - trialStartTime) / 1000;
-
-      const isNormal = /_gap(\.mp3)?$/.test(currentAudioFile); // true if just "_gap"
-      const correctAnswer = isNormal ? "normal" : "wonky";
-      
-      const entry = {
-        participant: participantID,
-        session: sessionID,
-        trial_num: trialCounter,
-        timestamp: new Date().toISOString(),
-        choice,
-        audio: currentAudioFile,
-        correct_answer: correctAnswer,
-        reaction_time_sec: parseFloat(reactionTimeSec.toFixed(3))
-    };
-
-      const backendlessURL = "https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses";
-
-      fetch(backendlessURL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(entry)
-      })
-      .then(res => res.json())
-      .then(() => {
-        trialCounter++;
-        if (trialCounter > totalTrials) {
-          document.body.innerHTML = `<div style="display: flex; justify-content: center; align-items: center; height: 100vh;"><h1>Thank you for participating! All trials complete.</h1></div>`;
-        } else {
-          rebuildBaseHTML();
-        }
-      })
-      .catch(err => {
-        console.error("Submission error:", err);
-        alert("Failed to record response.");
-        responseSubmitted = false;
-      });
-    }
-
-    // Reset screen and buttons for the next trial
-    function rebuildBaseHTML() {
-      document.body.innerHTML = `
-        <div id="visual-container">
-          <img class="media-content" id="stillframe1" src="stillframe1.png" />
-          <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
-          <img class="media-content" id="stillframe2" src="stillframe2.png" />
-          <video class="media-content" id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
-          <video class="media-content" id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
-          <video class="media-content" id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
-        </div>
-        <audio id="myAudio" hidden preload="auto"></audio>
-        <div id="trialControls"></div>
-      `;
-      responseSubmitted = false;
-      setupVisualElements();
-      updatePlayButton();
-    }
-
-    // Randomize array order
-    function shuffleArray(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
-    }
   </script>
 </body>
 </html>
